--- a/storage/S3.md
+++ b/storage/S3.md
@@ -11,15 +11,15 @@
 
 
 ## Requester Pays
-- Requester pays network and downlaod cost
+- Requester pays network and download cost
 - use to share large data sets with other accounts
-- user must be autherized in aws 
+- user must be authorized in aws 
 
 ## S3 event notifications
 - trigger an action (lambda) on api request to the bucket
-- can also use event bride for more targets and filters
+- can also use event bridge for more targets and filters
 
-### Targtes
+### Targets
 - [[Lambda]]
 - [[SNS]] 
 - [[SQS]]
@@ -31,10 +31,10 @@
 - understand s3 bill
 
 ## MFA-protected API Access
-- enforce MFA for access to S3 ressources
+- enforce MFA for access to S3 resources
 
-## MFA delte
-- enforce MFA for delte object action
+## MFA delete
+- enforce MFA for delete object action
 
 ## Versioning
 - if an object is updated the old version still persists within the bucket
@@ -57,53 +57,53 @@ aws s3 sync s3://DOC-EXAMPLE-BUCKET-SOURCE s3://DOC-EXAMPLE-BUCKET-TARGET
 
 ### Glacier
 - some applications can save data directly into Glacier (e.g. Tape gateway, data sync) , you can also do this manually by using cli
-- snowball transfer cannot be directly inserted only transfered from default tier
+- snowball transfer cannot be directly inserted only transferred from default tier
 - low cost but higher retrieval cost and time
 - retrieve within 12 hours
 
-#### Expedited Retrival
-- 1 to 5 minutes of retrival time 
+#### Expedited Retrieval
+- 1 to 5 minutes of retrieval time 
 
-#### Provisoned Retrival Capacity
-- guranteed up to 150mbs retrival speed
+#### Provisioned Retrieval Capacity
+- guaranteed up to 150mbs retrieval speed
 
 #### Glacier Deep Archive
-- 75% cheeper than Glacier
-- higher retriveal feed than glacier
-- no expedited retrival
+- 75% cheaper than Glacier
+- higher retrieval feed than glacier
+- no expedited retrieval
 - can retrieve at lower fee using bulk retrieve but this will take 48 hours
 
-### Infreqnet Access
+### Infrequent Access
 - less freq access, but instantly available
 - low per GB Storage price
-- retrival fee
+- retrieval fee
 
 ### One Zone / One Zone IA
 - single AZ storage 20% less cost
 
-## Livecycle Rules
+## Lifecycle Rules
 
-### Transiton Actions
-- move to diffrent storage tier after time
-- can transition to infrequent access only after 30 days
+### Transition Actions
+- move to different storage tier over time
+- can transition to infrequent access after 30 days
 
-### Transfer Limitations for Livecycle Rules
+### Transfer Limitations for Lifecycle Rules
 ![[Pasted image 20221101123650.png]]
 
 ### Expiration Actions
-- delte access logs
+- delete access logs
 - delete old versions of files
-- delte incomplete multi part uploads
+- delete incomplete multi part uploads
 - can apply to paths or full bucket
 
-## Tranfer Accelerator
+## Transfer Accelerator
 - fast transfer over long distances
 - uses cloudfront edge locations
 - routes via optimized path
 
-## Multipard uploaads
-- transmit object in chuncks
-- if one chunk fails, only that cuck needs to be retransmitted
+## Multipart uploads
+- transmit object in chunks
+- if one chunk fails, only that chunk needs to be retransmitted
 - over 100mb should be considered
 -  improved throughput
 
@@ -111,7 +111,7 @@ aws s3 sync s3://DOC-EXAMPLE-BUCKET-SOURCE s3://DOC-EXAMPLE-BUCKET-TARGET
 - add or deny permissions to objects
 - can be attached to users groups or buckets
 - can grant access to other aws accounts
-- can restrict based on multi coditions for the requets (ip, time, ssl )
+- can restrict based on multi conditions for the requests (ip, time, ssl )
 
 ## ACL
 - can also use ACL to grant another account access
@@ -120,13 +120,13 @@ aws s3 sync s3://DOC-EXAMPLE-BUCKET-SOURCE s3://DOC-EXAMPLE-BUCKET-TARGET
 
 ### SEE S3
 - Server Side encryption of objects 
-- aws manged
+- aws managed
 - replication by default
 
-### SEE C
+### SSE
 - Server Side encryption
 - customer managed keys
-- obhects can not be replicated
+- objects can not be replicated
 
 ### SSE KMS
 - Need to specify need key for object in new bucket
@@ -148,23 +148,23 @@ aws s3 sync s3://DOC-EXAMPLE-BUCKET-SOURCE s3://DOC-EXAMPLE-BUCKET-TARGET
 ### Use cases
 - compliance
 - latency
-- replication across accounbts
+- replication across accounts
 - log aggregation
 - sync data to test account from prod
 
 ## Performance
 - 100-200ms
-- 3,5k put copy post delte per prefix
+- 3,5k put copy post delete per prefix
 - 5,5k read per prefix
-- use multi part upload for parallell upload
-- transfer accel to upload to edge location instead of directyl to s3, also use for dl if files are bigger than 1GB
+- use multi part upload for parallel upload
+- transfer accel to upload to edge location instead of directly to s3, also use for dl if files are bigger than 1GB
 - byte range fetches -> multi part download
 
 ## Select
 - filter data server side to reduce network cost (100 lines out of 1 mil lines csv)
 
 ## Batch operations
-- modify all metadata and properies
+- modify all metadata and properties
 - copy objects between buckets
 - encrypt all unencrypted objects
 - modify acl and tags
@@ -181,6 +181,6 @@ aws s3 sync s3://DOC-EXAMPLE-BUCKET-SOURCE s3://DOC-EXAMPLE-BUCKET-TARGET
 - If [[CloudTrail]] is not enough information you use this
 
 ### Features
-- including referer
+- including referrer
 - including turn around time
 
