more spelling and clariy

--- a/storage/S3.md
+++ b/storage/S3.md
@@ -14,6 +14,7 @@
 - Requester pays network and download cost
 - use to share large data sets with other accounts
 - user must be authorized in aws 
+- owned by aws account, must specify permissions for other accounts
 
 ## S3 event notifications
 - trigger an action (lambda) on api request to the bucket
